Capstone Project 2nd Draft

--- a/lessons.html
+++ b/lessons.html
@@ -34,14 +34,14 @@
                             <a href="lessons.html" class="text-decoration-none nav-link text-center" style="color: #f9ebe0">Lessons</a>
                         </li>
                         <li class="nav-item col">
-                            <a href="contact.php" class="text-dark text-decoration-none nav-link text-center">Contact</a>
+                            <a href="contact.html" class="text-dark text-decoration-none nav-link text-center">Contact</a>
                         </li>
                     </ul>   
                 </div> 
             </div>
         </nav> 
 
-        <div class="wrapper vidwrapper mt-5"> 
+        <div class="wrapper vidwrapper"> 
             <h1 class="text-center">
                  My Teaching Style
             </h1>
@@ -51,7 +51,7 @@
             </div>
         </div>
 
-        <div class="wrapper infowrapper mt-5 p-5">
+        <div class="wrapper infowrapper">
             <h1 class="text-center">
                 Lesson Information
             </h1>
@@ -71,9 +71,12 @@
                             For <a href="https://docs.google.com/document/d/1lzmkiblXM6OyvyicpyyChUucUNFfgTKggLdnt8TXgRM/edit" 
                             class="link">adult</a> lessons
                         </li>
+                        <li>
+                            For <a href="https://docs.google.com/document/d/1hyoCIIbraVMmLEEpCpJ8rDdVZf9YrG8um3W_lyXljz8/edit" 
+                            class="link">video responses</a>: this is where you can send me a video asking a question or playing music and I'll send a response video back.
+                        </li>
                     </ul>
                 </li>
-                <br>
                 <li>
                     Teaching Locations:
                     <ul>
@@ -81,15 +84,17 @@
                             Online: anywhere
                         </li>
                         <li>
-                            In person: either at Infusing Music, 3005 N. West Street, Flagstaff, AZ 86004, or   
-                            my home at 2246 Gambel Oak Trail, Flagstaff, AZ 86005
+                            In person: either at <a class="link" href="https://www.google.com/maps/place/Infusing+Music+Studios/@35.2173614,-111.6244737,17z/data=!3m1!4b1!4m5!3m4!1s0x872d8f2b22cca3ef:0x18e6a901eb278d5a!8m2!3d35.217357!4d-111.622285">
+                            Infusing Music, 3005 N. West Street, Flagstaff, AZ 86004</a>, or   
+                            my home at <a class="link" href="https://www.google.com/maps/place/2246+Gambel+Oak+Trail,+Flagstaff,+AZ+86005/@35.1054033,-111.6889712,16.37z/data=!4m5!3m4!1s0x872d9abe51d041bf:0xd19e06370cc927a4!8m2!3d35.104472!4d-111.6864213">
+                            2246 Gambel Oak Trail, Flagstaff, AZ 86005</a>
                         </li>
                     </ul>
                 </li>
             </ol>
         </div>
 
-        <div class="wrapper infowrapper mt-5 mb-5 p-5">
+        <div class="wrapper infowrapper">
             <h1 class="text-center">
                 Other Resources
             </h1>
@@ -161,15 +166,23 @@
             </ol>
         </div>
 
-        <footer class="container-fluid">
+        <footer>
             <p class="foot">
-                Teaching Location: Sunnyside, Katchina, or online
+                Teaching Location: <a class="footlink" href="https://www.google.com/maps/place/Infusing+Music+Studios/@35.2173614,-111.6244737,17z/data=!3m1!4b1!4m5!3m4!1s0x872d8f2b22cca3ef:0x18e6a901eb278d5a!8m2!3d35.217357!4d-111.622285">
+                    Sunnyside</a>, <a class="footlink" href="https://www.google.com/maps/place/2246+Gambel+Oak+Trail,+Flagstaff,+AZ+86005/@35.1054033,-111.6889712,16.37z/data=!4m5!3m4!1s0x872d9abe51d041bf:0xd19e06370cc927a4!8m2!3d35.104472!4d-111.6864213">
+                    Kachina</a>, or online
             </p>
             <p class="foot">
-                pianowithgeorgia@gmail.com
+                <a class="footlink" href="mailto:pianowithgeorgia@gmail.com">
+                    <script>
+                    var s1="pianowithgeorgia"
+                    var s2="@"
+                    var s3="gmail.com"
+                    document.write(s1+s2+s3);
+                    </script></a>
             </p>
             <p class="foot">
-                602-405-8935
+                <a class="footlink" href="tel:6024058935">602-405-8935</a>
             </p>
         </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
