--- a/contact.html
+++ b/contact.html
@@ -1,27 +1,3 @@
-<?php 
-if(isset($_POST['submit'])){
-    $to = "pianowithgeorgia@gmail.com"; 
-	$id = "Form Submission";
-    $contact_name = $_POST['contact_name'];
-    $student_name = $_POST['student_name'];
-	$phone = $_POST['phone'];
-	$email = $_POST['email'];
-	$age = $_POST['age'];
-	$experience = $_POST['experience'];
-    $subject = "Form Submission";
-    $message = $_POST['message'];
-	$text = "A potential client has filled out your contact form.
-		\nContact Name: " . $contact_name . 
-		"\nStudent Name: " . $student_name . 
-		"\nPhone: " . $phone . 
-		"\nEmail: " . $email .
-		"\nStudent's Age (if adult - you can just write \"adult\"): " . $age . 
-		"\nStudent's Experience (if any): " . $experience . 
-		"\nTell me a little about yourself and/or what you would like to learn: " . $message;
-    $headers = "From: " . $id;
-    mail($to,$subject,$text,$headers);
-    }
-?>
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -64,10 +40,10 @@ if(isset($_POST['submit'])){
                 </div> 
             </div>
         </nav> 
-        <div class="wrapper contwrap mt-5 mb-5 p-5">
+        <div class="wrapper contwrap">
             <h1 class="text-center">Contact Me</h1>
            <p class="fields">Fields marked with * are required</p>
-            <form action="" method="post" class="row needs-validation" novalidate>
+            <form action="contact.php" method="post" class=" container-fluid row needs-validation" novalidate>
                 <div class="col-lg-6">
                     Contact Name* <br><input type="text" name="contact_name" placeholder="Name" class="form-control" required>
                     <div class="valid-feedback">
@@ -150,13 +126,21 @@ if(isset($_POST['submit'])){
         </div>
         <footer class="container-fluid">
             <p class="foot">
-                Teaching Location: Sunnyside, Katchina, or online
+                Teaching Location: <a class="footlink" href="https://www.google.com/maps/place/Infusing+Music+Studios/@35.2173614,-111.6244737,17z/data=!3m1!4b1!4m5!3m4!1s0x872d8f2b22cca3ef:0x18e6a901eb278d5a!8m2!3d35.217357!4d-111.622285">
+                    Sunnyside</a>, <a class="footlink" href="https://www.google.com/maps/place/2246+Gambel+Oak+Trail,+Flagstaff,+AZ+86005/@35.1054033,-111.6889712,16.37z/data=!4m5!3m4!1s0x872d9abe51d041bf:0xd19e06370cc927a4!8m2!3d35.104472!4d-111.6864213">
+                    Kachina</a>, or online
             </p>
             <p class="foot">
-                pianowithgeorgia@gmail.com
+                <a class="footlink" href="mailto:pianowithgeorgia@gmail.com">
+                    <script>
+                    var s1="pianowithgeorgia"
+                    var s2="@"
+                    var s3="gmail.com"
+                    document.write(s1+s2+s3);
+                    </script></a>
             </p>
             <p class="foot">
-                602-405-8935
+                <a class="footlink" href="tel:6024058935">602-405-8935</a>
             </p>
         </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
