--- a/about.html
+++ b/about.html
@@ -62,19 +62,19 @@
                 Music can be learned in such varied styles - by listening, by reading, by watching. I like to use a lot of improvisation and composition in addition to learning the music of other composers to help students become well rounded musicians who can rise to any occasion of their choosing. 
             </p>
             <p>
-                Levels: all
+                LEVELS: all
             </p>
             <p>
-                Ages: 5 - adult
+                AGES: five - adult
             </p>
             <p>
-                Education:<br>
+                EDUCATION:<br>
                 Bachelors of Music in Piano Performance under Dr. Judy Lively<br>
                 Master’s of Music in Piano Performance and Pedagogy under Nancy Weems<br>
                 Post Graduate Private Study with Dean Elder, Dr. Timothy Woolsey<br>
             </p>
             <p>
-                Experience:<br>
+                EXPERIENCE:<br>
                 College level teaching: 10 years<br>
                 Private studio teaching of all ages: 30 years
             </p>
