--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="testcont" id="testimonials">
             <h1 class="text-center testhead" style="color: rgb(38, 143, 177);">Testimonials</h1>
             <hr>
-            <div id="carouselExampleInterval" class="carousel slide carousel-dark" data-bs-ride="carousel" data-bs-interval="false">
+            <div id="carouselExampleIndicators" class="carousel slide carousel-dark" data-bs-ride="carousel" data-bs-interval="false">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -64,13 +64,16 @@
                   </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    "Georgia truly is a fantastic piano teacher and  musician. She is extremely knowledgeable 
-                    and her teaching style has made my son’s lessons with her productive and meaningful. 
-                    He truly enjoys learning from her and is growing week by week!  I cannot recommend her 
-                    highly enough! She is outstanding!"<br><br>
-                    -Jen, parent
+                    <div class="quote">
+                      "Georgia truly is a fantastic piano teacher and  musician. She is extremely knowledgeable 
+                      and her teaching style has made my son’s lessons with her productive and meaningful. 
+                      He truly enjoys learning from her and is growing week by week!  I cannot recommend her 
+                      highly enough! She is outstanding!"
+                    </div>
+                      -Jen, parent
                   </div>
                   <div class="carousel-item">
+                    <div class="quote">
                     "So, here’s the thing. I’ve been a classroom teacher for 20 years, and still I am regularly 
                     amazed at the instructional moves that Georgia has with my 5 year old- and that’s online! 
                     When my daughter gets silly, she’s able to roll with it and then gently move her into a more 
@@ -78,43 +81,50 @@
                     the piano lesson in that direction, but still covers so many skill. As a result, my kid loves 
                     her piano lessons AND is progressing at a very age-appropriate pace. Did I mention she’s 
                     able to do all of this virtually? Georgia is truly the best teacher we could have ever 
-                    hoped for."<br><br>
+                    hoped for."
+                    </div>
                     -Allison, parent
                   </div>
                   <div class="carousel-item">
+                    <div class="quote">
                     "Our daughter has been taking piano lessons remotely with Georgia for many months now 
                     and we love it! Wish it could be in person but we live too far away. My daughter has 
                     learned so much in this short time and is being challenged. Georgia is professional 
-                    and fun and just makes you feel comfortable :) we highly recommend her!"<br><br>
+                    and fun and just makes you feel comfortable :) we highly recommend her!"</div>
                     -Jess, parent
                   </div>
                   <div class="carousel-item">
+                    <div class="quote">
                     "I have been attending lessons with Mrs. Sears for some time now and I absolutely adore each 
                     moment with her. She takes time to talk about personal things as well as teaching piano, 
                     that allows us to respect each other and learn from one another. I recommend her as a piano 
-                    teacher!"<br><br>
+                    teacher!"</div>
                     -Dani, student
                   </div>
                   <div class="carousel-item">
+                    <div class="quote">
                     She loves the piano and has a deep appreciation for anyone that has interest in learning this amazing instrument.
                     I highly recommend this teacher to anyone that wants to learn how to play.
                     If 6 stars were allowed, I would be asking if 7 stars were available.
-                    She is an exceptional piano teacher."<br><br>
+                    She is an exceptional piano teacher."</div>
                     -Adam, student
                   </div>
                   <div class="carousel-item">
+                    <div class="quote">
                     "Georgia is truly the most amazing piano teacher I could have asked for. She instilled a love for music in me 
                     that led me to start teaching, also!! She emphasizes bringing out the beauty of the music, and truly helps you 
                     fall in love with each piece you learn. I’m so thankful to have had her as my teacher for so many years, and I 
-                    can only hope to help my children learn to love music as much as she helped me."<br><br>
+                    can only hope to help my children learn to love music as much as she helped me."</div>
                     -Lisa, student
                   </div>
                   <div class="carousel-item">
+                    <div class="quote">
                     "Ms. Georgia is a phenomenal teacher and all around person to learn music with! I grew so much as a pianist 
-                    under her instruction, which is personalized and inspired and so full of joy."<br><br>
+                    under her instruction, which is personalized and inspired and so full of joy."</div>
                     -Roshan, student
                   </div>
                   <div class="carousel-item">
+                    <div class="quote">
                     "Georgia Sears is an inspiring and motivating piano teacher! We could not have found a better teacher when 
                     we moved to Arizona 16 years ago. She taught both my son and daughter for several years when she resided in 
                     the Phoenix west valley. She took their piano skills, musicality and artistry to new heights while guiding 
@@ -123,24 +133,25 @@
                     delight in my lessons with her. She inspired me in such a way that I found a new joy in playing piano. 
                     No matter your age or skill level, Georgia will bring out the best in your playing. In addition to her 
                     phenomenal qualifications and experience,  her calm, patient and friendly personality will have you 
-                    looking forward to each lesson. I highly recommend her!"<br><br>
+                    looking forward to each lesson. I highly recommend her!"</div>
                     -Pamela, parent
                   </div>
                   <div class="carousel-item">
+                    <div class="quote">
                   "My two children studied piano with Georgia for five wonderful years during her time in Austin, Texas.  
                   Both her in-person and online classes were a constant source of joy for my kids: a respite from the everyday 
                   pressures of being students, kids, and siblings.  Georgia always found a way to bring lightness to her lessons 
                   while still motivating both kids to seek out their best efforts.  She has a wonderful sense of artistry and 
                   knows how to met each child at their technique level to find success and inspiration.  My children love playing 
-                  the piano and I am convinced Georgia is at the root of that passion."<br><br>
+                  the piano and I am convinced Georgia is at the root of that passion."</div>
                   -Barksdale, parent
                   </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                   <span class="visually-hidden">Previous</span>
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
                   <span class="visually-hidden">Next</span>
                 </button>
