--- a/index.html
+++ b/index.html
@@ -14,26 +14,32 @@
     <body>
         <nav class="navbar navbar-expand-sm fixed-top navbar-light">
             <div class="container-fluid">
-                <a href="index.html" class="navbar-brand"><img src="images/logo.png" class="logo" alt="Logo"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <a href="index.html" class="navbar-brand"><img src="images/logo.png" class="logo" alt="Logo">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" 
+                aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse row" id="navbarSupportedContent">
                     <ul class="navbar-nav">
                         <li class="nav-item col">
-                            <a href="index.html" class="text-decoration-none nav-link text-center" style="color: #f9ebe0">
+                            <a href="index.html" class="text-decoration-none nav-link text-center"style="color: #f9ebe0">
                             Home</a>
                         </li>
                         <li class="nav-item col">
-                            <a href="about.html" class=" text-dark text-decoration-none nav-link text-center">About</a>
+                            <a href="about.html" class=" text-dark text-decoration-none nav-link text-center">
+                            About</a>
                         </li>
                         <li class="nav-item col">
-                            <a href="lessons.html" class="text-dark text-decoration-none nav-link text-center">Lessons</a>
+                            <a href="lessons.html" class="text-dark text-decoration-none nav-link text-center">
+                            Lessons</a>
                         </li>
                         <li class="nav-item col">
-                            <a href="contact.html" class="text-dark text-decoration-none nav-link text-center">Contact</a>
+                            <a href="contact.html" class="text-dark text-decoration-none nav-link text-center">
+                              Contact</a>
                         </li>
-                    </ul>   
+                    </ul>
                 </div> 
             </div>
         </nav> 
